2007-02-08  Martin Leidig  <mleidig@schlund.de>

	* build.xml: Removed exclusion of the de.skelexamples package
	from compiling (it just confuses Eclipse, which sometimes doesn't
	compile the classes and shows errors). Added exclusion of the
	packages de.schlund.pfixcore.example and de.skelexamples to the
	jar file creation target (cause they're not needed/wanted here)

2007-02-08  Martin Leidig  <mleidig@schlund.de>

	* build.xml: removed unnecessary dist.type=prerelease option,
	release and build suffice, build is with and release without
	svn revision as version suffix

2007-02-07  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/Context.java: fixed bug, added
	missing check for null config

2007-02-07  Martin Leidig  <mleidig@schlund.de>

	* skel/projects/common/conf/server-config.wsdd: Removed as obsolete

2007-02-05  Martin Leidig  <mleidig@schlund.de>

	Added support for deployment of external webapps. Support can be
	enabled by adding <webapps hostbased="true"/> to project.xml.in.
	With this option the project/host gets its own webapps directory
	servletconf/webapps_PROJECTNAME. At the moment the Pustefix webapps
	are still deployed to the shared webapps directory, but external
	webapps can be deployed to the host specific webapps directory and
	thus can have their own context descriptor in META-INF. Additional
	webapps are automatically deployed, if they are placed inside the
	directory servletconf/autodeploy/webapps_PROJECTNAME. Project
	specific JkMount directives can be added to project.xml.in to give
	you access to your external in the Apache/mod_jk mode. 

	* src/de/schlund/pfixcore/util/XsltWebXmlTask.java: Create extra
	directory for each project/host with 'hostbased webapps' enabled
	* projects/core/build/create_apacheconf.xsl: Support for project
	specific jkmount directives
	* projects/core/build/create_serverxml.xsl: Adapt appBase and 
	docBase for 'hostbased webapps'