@@ -1,0 +1,36 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xs:schema
+  targetNamespace="http://pustefix.sourceforge.net/moduledescriptor200702"
+  xmlns:xs="http://www.w3.org/2001/XMLSchema"
+  xmlns:md="http://pustefix.sourceforge.net/moduledescriptor200702"
+  elementFormDefault="qualified">
+  
+  <xs:element name="module-descriptor" type="md:moduleDescriptorType">
+  </xs:element>
+  
+  <xs:complexType name="moduleDescriptorType">
+    <xs:sequence>
+      <xs:element name="module-name" type="md:moduleNameType"></xs:element>
+      <xs:element name="resources" type="md:resourcesType" minOccurs="0"></xs:element>
+    </xs:sequence>
+  </xs:complexType>
+  
+  <xs:simpleType name="moduleNameType">
+    <xs:restriction base="xs:string">
+      <xs:whiteSpace value="collapse"></xs:whiteSpace>
+      <xs:pattern value="[A-Za-z][A-Za-z0-9]*([_\-][A-Za-z0-9]+)*"></xs:pattern>
+    </xs:restriction>
+  </xs:simpleType>
+  
+  <xs:complexType name="resourcesType">
+    <xs:sequence>
+      <xs:element name="resource-mapping" type="md:resourceMappingType" minOccurs="0" maxOccurs="unbounded"></xs:element>
+    </xs:sequence>
+  </xs:complexType>
+  
+  <xs:complexType name="resourceMappingType">
+    <xs:attribute name="srcpath" use="required"></xs:attribute>
+    <xs:attribute name="targetpath" default=""></xs:attribute>
+  </xs:complexType>
+  
+</xs:schema>
